Update deploy-pipeline.yaml with the name of Python CI pipeline

--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -1,4 +1,4 @@
-name: NodeJS CI Pipeline
+name: Python CI Pipeline
 run-name: ${{ github.actor }} is running the Python CI Pipeline 🚀
 on: [push]
 jobs:
